fix: image