@@ -10,10 +10,17 @@ COPY src ./src
 
 RUN ./mvnw clean package -DskipTests
 
+# ==========================================
+
 FROM eclipse-temurin:25-jre-jammy
 
 WORKDIR /app
+# hadolint ignore=DL3008
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends fontconfig libfreetype6 libwebp7 libwebp-dev && \
+    rm -rf /var/lib/apt/lists/*
 
+# สร้างและสลับไปใช้ non-root user
 RUN groupadd -r spring && useradd -r -g spring spring
 USER spring:spring
 
@@ -21,4 +28,4 @@ COPY --from=builder /app/target/*.jar app.jar
 
 EXPOSE 9000
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "app.jar"]
